# keryx

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SETUP.md  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml
agent/: __init__.py  answerer.py  capabilities_fleet.py  factory.py  fleet.py  ledger.py  ledger_verify.py  llm.py  main.py  pg_ledger.py  pipeline.py  retrieval.py  security.py
agent/attestation/: __init__.py  signer.py
agent/grounding/: __init__.py  embeddings.py  judge.py  scorer.py
apps/: README.md
apps/agent-stack-starter-kits/: README.md
apps/arc-commerce/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
apps/arc-commerce/app/: globals.css  layout.tsx  page.tsx
apps/arc-commerce/components/: CopyTxHashButton.tsx  credits-badge.tsx  env-var-warning.tsx  hero.tsx  login-form.tsx  logout-button.tsx  next-logo.tsx  supabase-logo.tsx  theme-switcher.tsx  user-dashboard.tsx
apps/arc-commerce/supabase/: config.toml
apps/arc-commerce/types/: environment.d.ts  tanstack-table.d.ts
apps/arc-escrow/: .env.example  environment.d.ts  package.json
apps/arc-escrow/app/: globals.css
apps/arc-escrow/components/: agreements-table.tsx  deploy-smart-contract-button.tsx  hero.tsx  validation-failed-dialog.tsx
apps/arc-fintech/: eslint.config.mjs  postcss.config.mjs  proxy.ts
apps/arc-fintech/app/: globals.css  layout.tsx  page.tsx
apps/arc-fintech/components/: add-funds-dialog.tsx  app-sidebar.tsx  auth-button.tsx  balance-provider-wrapper.tsx  compliance-status-badge.tsx  data-freshness-indicator.tsx  export-button.tsx  global-search.tsx  hero.tsx  login-form.tsx  nav-main.tsx  new-wallet-dialog.tsx  rebalance-button.tsx  send-button.tsx  sign-up-form.tsx  site-header.tsx  transfer-dialog.tsx  wallet-created-dialog.tsx  wallet-select.tsx
apps/arc-fintech/lib/: utils.ts
apps/arc-fintech/supabase/: config.toml
apps/arc-fintech/types/: compliance.ts  environment.d.ts
apps/arc-multichain-wallet/: README.md  next.config.ts  package.json
apps/arc-multichain-wallet/app/: layout.tsx
apps/arc-multichain-wallet/components/: connect-wallet-dialog.tsx  connect-wallet.tsx  env-var-warning.tsx  login-form.tsx  sign-up-form.tsx  transaction-history.tsx  update-password-form.tsx  wagmi-provider.tsx
apps/arc-multichain-wallet/lib/: chain-config.ts  deposit.ts
apps/arc-multichain-wallet/supabase/: .gitignore  config.toml
apps/arc-multichain-wallet/types/: environment.d.ts
apps/arc-p2p-payments/: .env.example  README.md  environment.d.ts  package.json  proxy.ts
apps/arc-p2p-payments/app/: globals.css  manifest.ts
apps/arc-p2p-payments/components/: bottom-tab-navigation.tsx  passkey-setup.tsx  recipient-search.input.tsx  transactions-tab.tsx  (+3 more)
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployFull.s.sol
contracts/src/: CitationRegistry.sol  CitationSplitter.sol  IdentityRegistry.sol  KeryxSettlement.sol  KeryxToll.sol  ReputationRegistry.sol  ValidationRegistry.sol
contracts/test/: Access.t.sol  Dispute.t.sol  Distribution.t.sol  Governance.t.sol  Keryx.t.sol  KeryxWiring.t.sol  Oracle.t.sol  Payments.t.sol  Proxy.t.sol  Registry.t.sol  Staking.t.sol  Treasury.t.sol  Util.t.sol
db/migrations/: 0001_init.sql  0002_align_embedding_dim.sql  0002_settlement_ref.sql  0003_citations_mirror.sql
docs/: AGENTS.md  CAPABILITIES.md  CLAUDE.md  DEPLOY.md  SUBMISSION.md  VERIFIED-SIGNATURES.md  docs.md  phases.md  plan.md  prd.md
rail/: __init__.py  main.py
rail/appkit/: .env.example  README.md  appkit.ts  capabilities-server.ts  demo.ts  earn.ts  estimate.ts  network.ts  package-lock.json  package.json  pay-server.ts  unified-balance.ts
rail/cite/: __init__.py
rail/m0_spike/: .env.example  README.md  generate-wallets.ts  network.ts  package-lock.json  package.json  payer.ts  seller.ts  spike.ts  tsconfig.json  verify-transfer.ts
registry/: __init__.py  factory.py  fixtures.py  ingest.py  ingest_run.py  models.py  pg.py  pg_store.py  store.py
scripts/: capabilities-demo.sh  db_check.py  demo.sh  kitchen-sink.sh
shared/: __init__.py  agent_tools.py  bonds.py  capability_index.py  chain.py  circle_wallets.py  config.py  credits.py  erc8004.py  erc8183.py  escrow.py  gateway.py  memo.py  network.py  ooak_workflow.py  orders.py  p2p.py  qf.py  rail.py  schedule.py  splits.py  streaming.py  swap.py  traction.py  treasury.py  types.py  workflow.py
tests/: _pg_fakes.py  test_attestation.py  test_bonds.py  test_chain.py  test_circle_wallets.py  test_embeddings.py  test_erc8004.py  test_erc8183.py  test_gateway.py  test_grounding.py  test_http_rail.py  test_ingest.py  test_ledger.py  test_ledger_endpoint.py  test_ledger_verify.py  test_llm.py  test_network.py  test_ooak_workflow.py  test_persistence_factory.py  test_pg_ledger.py  test_pg_store.py  test_pipeline.py  test_qf.py  test_royalties.py  test_security.py  test_security_fixes.py  test_shared_contract.py  test_splits.py  test_streaming.py
web/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: Copy.tsx  Footer.tsx  HealthDot.tsx  Nav.tsx  Toast.tsx  globals.css  layout.tsx  page.tsx
web/lib/: api.ts  capabilities.ts  escrow.ts  proxy.ts  types.ts
(+358 files in other folders)
