[project]
name = "keryx"
version = "0.0.0"
description = "Citation-toll layer for the agent web — rail + agent + registry (Python side)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "eth-account>=0.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Top-level packages; web/ is a separate Node app, vendor/ is reference only.
packages = ["shared", "rail", "rail.cite", "agent", "agent.grounding", "agent.attestation", "registry"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["vendor/", "web/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
