[project]
name = "keryx"
version = "0.0.0"
description = "Citation-toll layer for the agent web — rail + agent + registry (Python side)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "eth-account>=0.13",
    "eth-abi>=5.0",
    "eth-utils>=4.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Vercel FastAPI deploy: this repo has two FastAPI apps (agent + rail); the agent
# is the public backend (the web's /api/* routes proxy to it). Mock rail by default.
[tool.vercel]
entrypoint = "agent.main:app"

[tool.setuptools]
# Top-level packages; web/ is a separate Node app, vendor/ is reference only.
packages = ["shared", "rail", "rail.cite", "agent", "agent.grounding", "agent.attestation", "registry"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# The capability catalog holds intentional long example-curl data strings.
[tool.ruff.lint.per-file-ignores]
"shared/capability_index.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["vendor/", "web/"]
plugins = ["pydantic.mypy"]

# eth-abi / eth-utils ship py.typed but don't re-export their top-level helpers in __all__,
# which trips strict's no-implicit-reexport. Treat their re-exports as public.
[[tool.mypy.overrides]]
module = ["eth_abi", "eth_abi.*", "eth_utils", "eth_utils.*"]
implicit_reexport = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
